--- a/index.html
+++ b/index.html
@@ -6,3 +6,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
+
+<header>
+  <h1>Beetroot (Beta vulgaris)</h1>
+</header>
+
+<header>
+  <nav>
+    <ul>
+      <li><a href="#">Common-varieties</a></li>
+      <li><a href="#">Nutritional-information</a></li>
+      <li><a href="#">Tags</a></li>
